Fix index menu sizing on smaller viewport

--- a/sass/components/menus.scss
+++ b/sass/components/menus.scss
@@ -13,7 +13,11 @@
   }
 
   @include element ('item') {
-    @include media ('<ds') {
+    @include media ('<tl') {
+      width: 25%;
+    }
+
+    @include media ('<tp') {
       width: 100%;
     }
   }
